# 1c_entry_task

./: .clang-format  CMakeLists.txt  README.md  game_solver.cpp  game_solver.hh  game_state.cpp  game_state.hh  main.cpp  tests.cpp
.github/workflows/: main.yml
